[package]
name = "git-find"
version = "0.4.0"
authors = ["David Bernard <david.bernard.31@gmail.com>"]
description = "A tool (cli & lib) to find local git repositories."
readme = "README.md"
license = "CC0-1.0"
keywords = ["git", "find", "search"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/davidB/git-find"
homepage = "https://github.com/davidB/git-find"

[badges.appveyor]
repository = "davidB/git-find"

[badges.travis-ci]
repository = "davidB/git-find"

[dependencies]
slog = { version= "^2.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "^2.3"
slog-term = "^2.4"
walkdir = "2"
gtmpl = "^0.5"
gtmpl_derive = "^0.3"
gtmpl_value= "^0.3"
structopt = "0.2"
git2 = { version = "^0.7", features = [], default-features = false }
regex = "1.0.1"

[dev-dependencies]
spectral = "0.6.0"

[[bin]]
name = "git-find"
path = "src/main.rs"
doc = false

[target.'cfg(all(unix, not(target_os = "redox")))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2"
winapi = "0.3"