[package]
name = "git-find"
version = "0.5.1-dev"
authors = ["David Bernard <david.bernard.31@gmail.com>"]
description = "A tool (cli & lib) to find local git repositories."
readme = "README.md"
license = "CC0-1.0"
keywords = ["git", "find", "search"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/davidB/git-find"
homepage = "https://github.com/davidB/git-find"
edition = "2018"

[badges.appveyor]
repository = "davidB/git-find"

[badges.travis-ci]
repository = "davidB/git-find"

[dependencies]
slog = { version= "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.6.0"
slog-term = "2.6.0"
walkdir = "2.3.1"
gtmpl = "0.6.0"
gtmpl_derive = "0.4.0"
gtmpl_value= "0.4.0"
structopt = "0.3.21"
git2 = { version = "0.13.15", features = [], default-features = false }
regex = "1.4.3"

[dev-dependencies]
spectral = "0.6.0"

[[bin]]
name = "git-find"
path = "src/main.rs"
doc = false

[target.'cfg(all(unix, not(target_os = "redox")))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2"
winapi = "0.3"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'  # Optimize for size.
codegen-units = 1
